res/css/style.css
/*CSS reset*/
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/*END CSS reset*/

/*animations*/
@keyframes pulse {
    from { transform: scale(1); }
    50% { transform: scale(1.1); }
    to { transform: scale(1); }
}
@keyframes appear-from-top {
    from { top: 25%; opacity: 0;}
    to { top: 50%; opacity: 1; }
}
@keyframes appear {
    from { opacity: 0;}
    to { opacity: 1; }
}
/*JS styles*/
.hide-el {
    display: none !important;
}
.show-el {
    display: block !important;
    
}
.appear-el {
    opacity: 1 !important;
    transition: opacity ease-in .5s;
    transition-delay: 1s;
}
.disappear-el {
    opacity: 0;
}

/*CSS-VARS*/
:root {
    --white: #ebebeb;
    --black: #111111;
    --gray: #a4a4a4;
    --light-gray: #d8d8d8;
    --icon-bg-blue: #00B0E8;
    --main-font: 'Roboto', sans-serif;
    --btn-shadow: 0px 3px 6px rgba(0, 0, 0, 0.15);
        
}
*:focus {
    border: none;
    outline: none;
}
body {
    font-family: var(--main-font);
    -webkit-tap-highlight-color: transparent;
}
.app-container {
    display: block;
    width: 100%;
    max-width: 480px;
    min-height: 500px;
    height: 100vh;
    margin: 0 auto;
    background-color: var(--white);
    overflow: hidden;
    position: relative;
}


/*header*/
.app-container .header {
    display: flex;
    flex-direction: column;
    height: 8.75rem;
    background: linear-gradient(90deg, #052E97 1.16%, #0B84AA 49.88%, #0896B6 97.2%);
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
}

.app-container .header .date-block .current-date {
    color: var(--white);
    font-family: var(--main-font);
    font-weight: 400;
    margin: .25rem .25rem;
    font-size: .85rem;
}
.app-container .header .date-block .current-date .current-date-js {
    font-weight: 700;
}
.app-container .header .menu-wrapper {
    display: flex;
    justify-content: space-around;
    align-items: center;
}
.app-container .header .menu-wrapper .menu-item {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    max-height: 10rem;
}

.app-container .header .menu-wrapper .menu-item .btn {
    width: 4.75rem;
    height: 4.75rem;
    border-radius: 50%;
    background: #00B0E8;
    box-shadow: var(--btn-shadow);
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    transition: all .25s;
    background-position: center center;
    background-size: 60%;
    background-repeat: no-repeat;
    border: none;
    outline: none;
}
.app-container .header .menu-wrapper .menu-item .btn-calendar {
    background-image: url(../img/calendar.svg);
}
.app-container .header .menu-wrapper .menu-item .btn-dates-list {
    background-image: url(../img/list-date.svg);
}

.app-container .header .menu-wrapper .menu-item .btn:hover {
    transform: scale(1.1);
    
}
.app-container .header .menu-wrapper .menu-item .btn img {
    width: 2.5rem;
    height: 2.5rem;
}
.app-container .header .menu-wrapper .menu-item p {
    color: var(--white);
    font-size: 0.75rem;
    text-align: center;
    margin-top: .5rem;
    
}
.app-container .header .menu-wrapper .weather-block .city {
    font-weight: 500;
    font-size: .8rem;
}
.app-container .header .menu-wrapper .weather-block .temp {
    font-size: 2.8rem;
    position: relative;
}
.app-container .header .menu-wrapper .weather-block .temp .deg-icon {
    position: absolute;
    top: 0;
    font-size: 1.2rem;
}
.app-container .header .menu-wrapper .weather-block img {
    height: 3rem;
    width: 3rem;
}

/*content part*/


.app-container .app-content {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    min-height: 60vh;
    max-height: 400px;
    padding: 1rem;
    overflow: auto;
}
.app-container .app-content .date-list-head {
    font-size: 1.2rem;
    font-weight: 700;
    animation: appear;
    animation-duration: 0.5s;
}
/* task list styles */
.app-container .app-content .task-list {
    width: 100%;
    padding: 1rem 0;
}
.app-container .app-content .task-list li {
    margin-top: .5rem;
    font-size: 1.3rem;
    display: flex;
    align-items: center;
    width: 100%;
}
.app-container .app-content .task-list li.done {
    color: var(--gray);
    text-decoration: line-through;
}
.app-container .app-content .task-list li .status {
    display: inline-block;
    height: 2rem;
    width: 2rem;
    border: 2px solid var(--gray);
    border-radius: 50%;
    margin-right: .5rem;
    cursor: pointer;
}
.app-container .app-content .task-list li span.checked {
    display: inline-block;
    height: 2.25rem;
    width: 2.25rem;
    border: none;
    border-radius: 50%;
    margin-right: .5rem;
    background-image: url(../img/checked.svg);
    background-position: center center;
    background-size: cover;
}

.app-container .app-content .task-list li .trash {
    display: inline-block;
    height: 2rem;
    width: 2rem;
    margin-right: .5rem;
    background-image: url(../img/trash.svg);
    background-position: center center;
    background-repeat: no-repeat;
    margin-left: auto;
    cursor: pointer;
}
.app-container .app-content .new-task-btn {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    transition: display ease-out 0.5s;
    
}
.app-container .app-content .new-task-btn img {
    height: 5rem;
    width: 5rem;
    cursor: pointer;
    transition: all 0.25s ease-in;
    animation: appear;
    animation-duration: .5s;
}
.app-container .app-content .new-task-btn img:hover {
    transform: rotate(90deg);
}
.app-container .app-content p {
    margin-top: 1rem;
    color: var(--gray);
}
/*message when list empty*/
.app-container .app-content .list-message {
    position: absolute;
    font-size: 1.2rem;
    text-align: center;
    width: 80%;
    top: 50%;
    left: 30%;
    transform: translate(-30%, -50%);
    animation: appear-from-top;
    animation-duration: 0.5s;
}

/*task input block*/
.app-container .task-input-block {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    max-width: 480px;
    min-height: 3rem;
    background-color: var(--light-gray);
    background: linear-gradient(-90deg, #052E97 1.16%, #0B84AA 49.88%, #0896B6 97.2%);
    padding: 1rem 0;
    position: absolute;
    bottom: -180px;
    left: 0;
    transition: all 0.5s;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    box-shadow: 0px -6px 6px rgba(0, 0, 0, 0.1);
}
.app-container .task-input-block input {
    padding: .6rem;
    border: 1px solid var(--light-gray);
    border-radius: 5px;
    margin: 1.2rem 1rem;
    width: 68%;
    font-size: 1.2rem;
    color: var(--black);
}
.app-container .task-input-block button {
    background-color: var(--icon-bg-blue);
    outline: none;
    border: none;
    width: 3rem;
    height: 3rem;
    border-radius: 50%;
    box-shadow: var(--btn-shadow);
    transition: all ease-out .2s;
    cursor: pointer;
}
.app-container .task-input-block button:hover {
    transform: scale(1.1);
}

/*date input block*/
.app-container .app-content .date-select {
    display: block;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    animation: appear-from-top;
    animation-duration: 0.5s;
    
}
.app-container .app-content .date-select p {
    margin-bottom: 1rem;
    font-size: 1.2rem;
    text-align: center;
    
}
.app-container .app-content .date-select .date-input {
    display: flex;
    justify-content: center;
    align-items: center;
}
.app-container .app-content .date-select .date-input input {
    border: none;
    background-color: var(--icon-bg-blue);
    padding: .7rem;
    font-size: 1.2rem;
    font-family: var(--main-font);
    color: var(--white);
    border-radius: 5px;
    margin-right: 1rem;
}
::-webkit-calendar-picker-indicator {
    filter: invert(1);
    cursor: pointer;
}
.app-container .app-content .date-select .date-input button {
    background-color: var(--icon-bg-blue);
    background-image: url(../img/check.svg);
    background-position: center center;
    background-size: cover;
    outline: none;
    border: none;
    width: 4.2rem;
    height: 4.2rem;
    border-radius: 50%;
    box-shadow: var(--btn-shadow);
    transition: all ease-out .2s;
    cursor: pointer;
}
.app-container .app-content .date-select .date-input button:hover {
    transform: scale(1.1);
}
.app-container .app-content .date-select .today-tasks-btn {
    display: flex;
    align-items: center;
    border: 1px solid #00B0E8;
    border-radius: 5px;
    margin: 0 auto;
    margin-top: 2.5rem;
    padding: .6rem;
    font-family: var(--main-font);
    font-size: 1.2rem;
    color: #00B0E8;
    background-color: transparent;
    cursor: pointer;
    animation: appear;
    animation-duration: .3s;
}
.app-container .app-content .date-select .today-tasks-btn .today-tasks-btn-icon {
    background-image: url(../img/today-date.svg);
    height: 2rem;
    width: 2rem;
    display: inline-block;
    margin-left: 1rem;
}
/*
input[type="date"] {
    font-size: 2rem;
    color: #888888;
    border: #888888;
    background-color: #888888;
}
input[type="date"]::-webkit-calendar-picker-indicator {
    filter: invert(1);
}
*/

